--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ I’m always looking to meet people and connect, so feel free to reach out!
                 <p class="project-desc"></p><br>
                 <div class="btn-container">
                     <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/arushan13/arushan-personal-website'">GitHub</button>
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://arushan.netlify.app'">Live Demo</button>
                 </div>
                 
             </div>
