--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="media.css">
+    <link rel="icon" type="image/x-icon" href="/images/Screenshot_2025-01-23_204058-removebg-preview.png">
 </head>
 <body>
     <nav id="desktop-nav">
