--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ I’m always looking to meet people and connect, so feel free to reach out!
                 <p class="project-desc"></p><br>
                 <div class="btn-container">
                     <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/arushan13/TextSuperMarioGame'">GitHub</button>
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://youtu.be/cnWsKzALLWA'">Live Demo</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://www.youtube.com/watch?v=b4VN41ZhzjA'">Live Demo</button>
                 </div>
             </div>
             <div class="details-container color-container">
