--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav id="desktop-nav">
-        <div class="logo"><img src="./images/Screenshot_2025-01-23_204058-removebg-preview.png" class="logopicture"></div>
+        <div class="logo"><a href="https://arushan.netlify.app/"><img src="./images/Screenshot_2025-01-23_204058-removebg-preview.png" class="logopicture"></a></div>
         <div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
