--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@ I’m always looking to meet people and connect, so feel free to reach out!
                         <img src="images/skills/js-emblem-orange-shield-and-white-text-vector-removebg-preview.png">
                         <img src="images/skills/azure-sql-database6354-removebg-preview.png">
                         <img src="images/skills/C_Programming_Language.svg.png">
+                        <img src="images/skills/arduino-1-logo-png-transparent.png">
                         <img src="images/skills/autocad-logo-69326D7728-seeklogo.com.png">
                         <img src="images/skills/Jupyter_logo.svg.png">
                         <img src="images/skills/Microsoft_Office_Excel_(2019–present).svg.png">
@@ -193,6 +194,7 @@ I’m always looking to meet people and connect, so feel free to reach out!
                         <img src="images/skills/js-emblem-orange-shield-and-white-text-vector-removebg-preview.png">
                         <img src="images/skills/azure-sql-database6354-removebg-preview.png">
                         <img src="images/skills/C_Programming_Language.svg.png">
+                        <img src="images/skills/arduino-1-logo-png-transparent.png">
                         <img src="images/skills/autocad-logo-69326D7728-seeklogo.com.png">
                         <img src="images/skills/Jupyter_logo.svg.png">
                         <img src="images/skills/Microsoft_Office_Excel_(2019–present).svg.png">
