--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="details-container">
                         <img src="./images/258-2587984_clipart-download-magnifying-glass-clipart-transparent-magnifying-glass.png" alt="experience icon" class="icon">
                         <h3><u>Summary</u></h3>
-                        <p class="abouttext">Current Term: <strong>1B</strong><br>Seeking Internships For: <strong>Fall 2025</strong><br> Courses: <strong>Discrete Math, Linear Circuits, Digital Circuits, Calculus II</strong></p>
+                        <p class="abouttext">Current Term: <strong>2A</strong><br>Seeking Internships For: <strong>Summer 2026</strong><br> Courses: <strong>Digital Computers, Algorithms & Data Structures, Electronic Circuits</strong></p>
                     </div>
                     <div class ="details-container">
                         <img src="./images/360_F_510584583_GP4UxCEzGCUULmyi5argC6cJGxeG9T5u-removebg-preview.png" alt="education icon" class="icon">
@@ -106,6 +106,17 @@ I’m always looking to meet people and connect, so feel free to reach out!
         <h1 class="title">Experience</h1>
         <div class="experience-details-container">
             <div class="about-containers">
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="./images/1753844783790.jpg" alt="Project 3" class="project-img">
+                    </div>
+                    <h2 class="experience-sub-title project-title">IT Developer <br>@ Generis</h2>
+                    <p class="date">Sept 2025 - Present</p>
+                    <p class="date">Toronto, Ontario</p><br>
+                    <p class="project-desc"><ul><li class="points">Fall 2025 Internship</li></ul></p><br>
+                    
+                </div>
+
                 <div class="details-container color-container">
                     <div class="article-container">
                         <img src="./images/1733364213978.jpg" alt="Project 3" class="project-img">
