--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ I’m always looking to meet people and connect, so feel free to reach out!
                         <img src="./images/1733364213978.jpg" alt="Project 3" class="project-img">
                     </div>
                     <h2 class="experience-sub-title project-title">Engineering Intern <br> @ i2R North America</h2>
-                    <p class="date">Jan 2025 - Present</p>
+                    <p class="date">Jan 2025 - April 2025</p>
                     <p class="date">Brampton, Ontario</p><br>
                     <p class="project-desc"><ul><li class="points">Winter 2025 Co-op - Data Analytics & Project Management</li></ul></p><br>
                     
